# mcp.bolster.online

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  app.py  click_mcp.py  main.py  pyproject.toml  test_app.py
.github/prompts/: content-review.yml
.github/workflows/: ai-content-review.yml  auto-release.yml  automerge.yml  code-quality.yml  deploy-webhook-config.yml  fun-experiments.yml  test-and-coverage.yml  upgrade-bolster.yml
deployment/: README.md  deploy.sh  webhook.json  webhook.json.template
deployment/nginx/: mcp.bolster.online
deployment/systemd/: mcp-bolster.service  mcp-webhook.service
tests/: test_bolster_integration.py  test_click_mcp.py
tests/fixtures/fake_cli/: __init__.py  cli.py
